fix: fixed overflow on mobile devices"

--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@
 }
 
 body {
-  overflow-x: hidden;
   background-color: var(--background-color);
 }
 
@@ -65,7 +64,7 @@ nav {
   position: fixed;
   top: 0;
   right: 0;
-  width: 100%;
+  width: 100vw;
   transform: translateX(100%);
   transition: 500ms;
   background-color: var(--darkest-background-color);
@@ -281,6 +280,10 @@ header {
 
 .swiper-slide {
   cursor: grab;
+}
+
+.photos {
+  overflow-x: hidden;
 }
 
 .photos-content img {
